--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,10 @@
     <string name="app_name">Mind Garden</string>
     <string name="str_begin">Begin</string>
     <string name="str_pause">Pause</string>
-    <string name="str_set_interval">Set Interval</string>
+    <string name="str_interval">Interval</string>
+    <string name="str_set_interval">Set interval</string>
+    <string name="str_congratulations">Congratulations!!</string>
+
 
     <string name="time_meditated_key">time_meditated_key</string>
     <integer name="time_meditated_default">0</integer>
@@ -12,4 +15,10 @@
 
     <string name="last_day_meditated_key">last_day_meditated_key</string>
     <integer name="last_day_meditated_default">99</integer>
+
+    <string name="last_log_in_key">last_log_in_key</string>
+    <integer name="last_log_in_default">99</integer>
+
+    <string name="repeat_interval_key">repeat_interval_key</string>
+    <integer name="repeat_interval_default">0</integer>
 </resources>
