--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,4 +21,7 @@
 
     <string name="repeat_interval_key">repeat_interval_key</string>
     <integer name="repeat_interval_default">0</integer>
+
+
+    <integer name="animation_frame_duration">50</integer>
 </resources>
